# fluent_python_note

./: pyproject.toml
chapter1/: README.md  card.py  vector.py
