[tool.poetry]
name = "fluent_python"
version = "0.1.0"
description = ""
authors = ["WeiChen Lin <asdfg09487@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
ipython = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
